RESOLVED FIXED224483
text-decoration-thickness property doesn't always trigger repaint when changed
https://bugs.webkit.org/show_bug.cgi?id=224483
Summary text-decoration-thickness property doesn't always trigger repaint when changed
Vanita Barrett-Smith
Reported 2021-04-13 05:59:48 PDT
Created attachment 425866 [details] HTML example (alternative to CodePen) ## Steps to reproduce 1. Open https://codepen.io/36degrees/pen/LYxQBbm or the attached example.html 2. Hover over both links of the links on the line “17px link / with colour change” - text decoration thickness property expands to 3px 3. Hover over both of the links on the line “19px link / with colour change” - text decoration thickness property only expands to 3px on the link with colour change. ## Expected Behaviour The text underline thickness should increase to 3px on all links when hovered. ## Actual Behaviour In this example, the text-decoration-thickness only increases to 3px on hover on links up to a font-size of 19px, unless the link also has a colour change on hover. The font-size at which the text-decoration-thickness property stops working changes depending on the thickness being set on hover. In the CodePen / attached example, text-decoration-thickness is set to 3px on hover and stops working at links of font-size: 19px. Other examples: text-decoration-thickness on hover: 2px font-size value at which it stops working: 15px text-decoration-thickness on hover: 5px font-size value at which it stops working: 27px
Attachments
HTML example (alternative to CodePen) (2.70 KB, text/html)
2021-04-13 05:59 PDT, Vanita Barrett-Smith
no flags
Alexey Proskuryakov
Comment 1 2021-04-13 14:55:58 PDT
In Safari 14.1, the underlines for 19px+ links are not painted at all (but the color ones are). Not sure if we'd want to track this aspect as a separate bug.
Radar WebKit Bug Importer
Comment 2 2021-04-20 06:00:17 PDT
Tim Nguyen (:ntim)
Comment 3 2023-01-07 23:31:46 PST
I have a fix for this.
Tim Nguyen (:ntim)
Comment 4 2023-01-08 00:00:06 PST
Tim Nguyen (:ntim)
Comment 5 2023-01-08 00:01:22 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/37799
EWS
Comment 6 2023-01-08 13:14:10 PST
Committed 258641@main (6be98ae1629f): <https://commits.webkit.org/258641@main> Reviewed commits have been landed. Closing PR #8372 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.