text-decoration-thickness property doesn't always trigger repaint when changed https://bugs.webkit.org/show_bug.cgi?id=224483 rdar://76895249

Reviewed by Darin Adler.

RenderStyle::changeRequiresRepaintIfText() should return true when text-decoration-thickness changes.

GOV.UK bug tracker: https://github.com/alphagov/reported-bugs/issues/60

* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/invalidation/text-decoration-thickness-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/invalidation/text-decoration-thickness-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/invalidation/text-decoration-thickness.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresRepaintIfText const):

Canonical link: https://commits.webkit.org/258641@main